fix spacing

--- a/src/styles/components/_add-song.scss
+++ b/src/styles/components/_add-song.scss
@@ -5,17 +5,15 @@
 }
 
 .form-title {
-  width: 20%;
-  margin: 0 10px !important;
+  margin: 0 0.5rem !important;
 }
 
 .form-artist {
-  width: 20%;
-  margin: 0 10px !important;
+  margin: 0 0.5rem !important;
 }
 
 .form-url {
-  margin: 0 10px !important;
+  margin: 0 0.5rem !important;
   width: 40%;
 }
 
