--- a/src/styles/components/_song-list.scss
+++ b/src/styles/components/_song-list.scss
@@ -10,7 +10,7 @@
 
 .song-title {
   text-decoration: none;
-  margin: 0 10px 0 0;
+  margin: 0 0.5rem 0 0;
 }
 
 .link-btn {
@@ -20,7 +20,7 @@
 }
 
 .artist {
-  margin: 0 10px 0 0;
+  margin: 0 0.5rem 0 0;
 }
 
 .song-list-item > div {
